--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Hey!</h1>
-        <h3>Varun here, welcome to my website :)</h3>
+        <h3>Varun here, welcome to my empty website :)</h3>
     </body>
 </html>
